# Architecture-log

./: PKG-INFO  README.md  dev.env  pyproject.toml
Architecture-log/src/archilog/: __init__.py  cli.py  config.py
Architecture-log/src/archilog/templates/: layout.html
archilog-0.2/: data.db  run.bat
archilog-0.2/src/archilog/: data.py
archilog-0.2/src/archilog/templates/: details.html  home.html
example/: pyproject.toml
src/archilog/: __init__.py  data.py  domain.py  forms.py  views.py
src/archilog/templates/: details.html  home.html  layout.html
src/archilog/test/: test_views.py
