[project]
name = "archilog"
version = "0.2"
description = "A simple project for educational purpose."
readme = "README.md"
dependencies = [
    "click>=8.3.1",
    "flask>=3.1.3",
    "flask-wtf>=1.2.2",
    "ruff>=0.15.4",
    "sqlalchemy>=2.0.48",
]
requires-python = ">=3.11"


[project.scripts]
archilog = "archilog.views:cli"


[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "example",
]
